# mcp-server

./: .gitignore  Dockerfile  README.md  client.py  main.py  pyproject.toml  server.py
resource/: titanic.db
tools/: __init__.py  sql_server.py
